# embeddings

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build_output.txt  cargo_output.txt
config/: fusion_config.json
docs/: README.md
src/: config.rs  handlers.rs  lib.rs  main.rs  models.rs  traits.rs
src/clients/: cohere.rs  huggingface.rs  jina.rs  local.rs  mod.rs  openai.rs  voyage.rs
src/services/: cache.rs  mod.rs  orchestrator.rs  vector_ops.rs
